# footstep-CUDA-DE

./: CHANGELOG.md  CMakeLists.txt  test.py  tmp.txt
include/cart_pole/: cart_pole_utils.cuh  model.cuh
include/curve/: arclength_param.cuh  bezier_curve.cuh  numerical_integration.cuh
include/diff_evolution_solver/: data_type.h  debug.cuh  decoder.cuh  evaluate.cuh  evolve.cuh  random_manager.cuh  solver.cuh
include/footstep/: footstep_utils.cuh  model.cuh
include/solver_center/: solver_center.h
include/utils/: config.h  utils.cuh  utils_fun.cuh
scripts/cart_pole/: cart_pole.py  speed_during_contact_100sec.py  speed_during_first_contact.py  t_spend_Benders_100sec_N10_cpp.mat  t_spend_Benders_100sec_N15_cpp.mat  t_spend_Benders_1sec_cpp.mat  t_spend_Benders_1sec_cpp_no_ws.mat  t_spend_Gurobi_100sec_N10.mat  t_spend_Gurobi_100sec_N15.mat  t_spend_Gurobi_1sec.mat
scripts/cart_pole/saved_noise/: recorded_noise.mat
scripts/footstep/: biped_factory.py  biped_maze.py
src/curve/: arclength_param.cu  bezier_curve.cu
src/diff_evolution_solver/: random_manager.cu  solver.cu
src/footstep/: footstep_utils.cu
src/solver_center/: solver_center.cpp
test/: README.md  bigEF_row_column_test  bigEF_row_column_test.cpp  bigE_matrix.cu  bigE_matrix.py  bigF_matrix.cu  bigF_matrix.py  big_F_python_output.csv  bitonic_plot.py  compute_bigEF_row_column  compute_bigF  compute_big_E_F  control_point_bound.py  plot_maze.py  recover_matrix_from_csr.cpp  sort_param  sort_param.cu  test_cudss_solver.cu  test_cudss_solver_single.cu  test_cudss_solver_single2.cu  test_diversity  test_diversity.cu
test/curve_test/: bezier.h  cuda_bezier.cuh  test_cuda_bezier.cuh  verify_bezier  verify_bezier.cu  verify_bezier_polar  verify_bezier_polar.cpp  verify_bezier_polar.cu
test/rebuild_model/: test_model  test_model.cpp  test_origin_model  test_origin_model.cpp  test_origin_model.py
